Format vignette code using styler

--- a/vignettes/tech-detail-wb.Rmd
+++ b/vignettes/tech-detail-wb.Rmd
@@ -10,10 +10,9 @@ output:
     highlight: "textmate"
     css: "custom.css"
     code_fold: hide
-# bibliography: "example.bib"
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{technitical details of derivering boundaries by Weighted Bonferroni}
+  %\VignetteIndexEntry{Procedure to compute p-value boundaries by weighted Bonferroni}
 ---
 
 ```{r, message = FALSE, warning = FALSE}
@@ -21,14 +20,13 @@ library(tibble)
 library(gt)
 library(gsDesign)
 library(dplyr)
-library(mvtnorm)
-library(ggplot2)
 library(wpgsd)
 ```
 
 # Example overview
 
-In a 2-arm controlled clinical trial example with one primary endpoint, there are 3 patient populations defined by the status of two biomarkers A and B:
+In a 2-arm controlled clinical trial example with one primary endpoint,
+there are 3 patient populations defined by the status of two biomarkers A and B:
 
 - biomarker A positive,
 - biomarker B positive,
@@ -41,9 +39,10 @@ The 3 primary elementary hypotheses are:
 - $H_3$: the experimental treatment is superior to the control in the overall population.
 
 Assume an interim analysis and a final analysis are planned for the study and the number of events are listed as
+
 ```{r}
-k <- 2            # number of total analysis
-n_hypotheses <- 3 # number of hypotheses
+k <- 2 # Number of total analysis
+n_hypotheses <- 3 # Number of hypotheses
 ```
 
 ## Observed p-values
@@ -51,12 +50,13 @@ n_hypotheses <- 3 # number of hypotheses
 ```{r}
 obs_tbl <- tribble(
   ~hypothesis, ~analysis, ~obs_p,
-    "H1",          1,       0.02,
-    "H2",          1,       0.01,
-    "H3",          1,       0.006,
-    "H1",          2,       0.015,
-    "H2",          2,       0.012,
-    "H3",          2,       0.004) %>%
+  "H1", 1, 0.02,
+  "H2", 1, 0.01,
+  "H3", 1, 0.006,
+  "H1", 2, 0.015,
+  "H2", 2, 0.012,
+  "H3", 2, 0.004
+) %>%
   mutate(obs_Z = -qnorm(obs_p))
 
 obs_tbl %>%
@@ -67,31 +67,32 @@ p_obs_IA <- (obs_tbl %>% filter(analysis == 1))$obs_p
 p_obs_FA <- (obs_tbl %>% filter(analysis == 2))$obs_p
 ```
 
-## Information fraction 
+## Information fraction
 
 ```{r}
 alpha <- 0.025
 event_tbl <- tribble(
   ~population, ~analysis, ~event,
-  "A positive",     1,       80,
-  "B positive",     1,       88,
-  "AB positive",    1,       64,
-  "overall",        1,       180,
-  "A positive",     2,       160,
-  "B positive",     2,       176,
-  "AB positive",    2,       128,
-  "overall",        2,       360,
+  "A positive", 1, 80,
+  "B positive", 1, 88,
+  "AB positive", 1, 64,
+  "overall", 1, 180,
+  "A positive", 2, 160,
+  "B positive", 2, 176,
+  "AB positive", 2, 128,
+  "overall", 2, 360,
 )
 ```
 
-The information fraction of $H_1, H_2, H_3$ at IA is
+The information fraction of $H_1$, $H_2$, $H_3$ at IA is
+
 ```{r}
 IF_IA <- c(
-  ((event_tbl %>% filter(analysis == 1, population == "A positive"))$event + (event_tbl %>% filter(analysis == 1, population == "overall"))$event)/
+  ((event_tbl %>% filter(analysis == 1, population == "A positive"))$event + (event_tbl %>% filter(analysis == 1, population == "overall"))$event) /
     ((event_tbl %>% filter(analysis == 2, population == "A positive"))$event + (event_tbl %>% filter(analysis == 2, population == "overall"))$event),
-  ((event_tbl %>% filter(analysis == 1, population == "B positive"))$event + (event_tbl %>% filter(analysis == 1, population == "overall"))$event)/
+  ((event_tbl %>% filter(analysis == 1, population == "B positive"))$event + (event_tbl %>% filter(analysis == 1, population == "overall"))$event) /
     ((event_tbl %>% filter(analysis == 2, population == "B positive"))$event + (event_tbl %>% filter(analysis == 2, population == "overall"))$event),
-  ((event_tbl %>% filter(analysis == 1, population == "AB positive"))$event + (event_tbl %>% filter(analysis == 1, population == "overall"))$event)/
+  ((event_tbl %>% filter(analysis == 1, population == "AB positive"))$event + (event_tbl %>% filter(analysis == 1, population == "overall"))$event) /
     ((event_tbl %>% filter(analysis == 2, population == "AB positive"))$event + (event_tbl %>% filter(analysis == 2, population == "overall"))$event)
 )
 
@@ -100,28 +101,40 @@ IF_IA
 
 ## Initial weight and transition matrix
 
-We assign the initial weights of $H_1, H_2, H_3$ as$\left(w_1(I), w_2(I), w_3(I) \right) = (0.3, 0.3, 0.4).$ And its multiplicity strategy is visualized in below. If $H_1$ is rejected, then $3/7$ local significance level $\alpha_1$ will be propagated to $H_2$, and $4/7$ will go to $H_3$. If $H_3$ is rejected, then half of $\alpha_3$ goes to $H_1$, and half goes to $H_2$.
+We assign the initial weights of $H_1$, $H_2$, $H_3$ as
+$\left(w_1(I), w_2(I), w_3(I) \right) = (0.3, 0.3, 0.4).$
+And its multiplicity strategy is visualized in below.
+If $H_1$ is rejected, then $3/7$ local significance level $\alpha_1$ will be
+propagated to $H_2$, and $4/7$ will go to $H_3$. If $H_3$ is rejected,
+then half of $\alpha_3$ goes to $H_1$, and half goes to $H_2$.
 
 ```{r}
-m <- matrix(c(      # Transition matrix
-    0, 3/7, 4/7,
-  3/7,   0, 4/7,
-  1/2, 1/2,   0), nrow = 3, byrow = TRUE)
+m <- matrix(c( # Transition matrix
+  0, 3 / 7, 4 / 7,
+  3 / 7, 0, 4 / 7,
+  1 / 2, 1 / 2, 0
+), nrow = 3, byrow = TRUE)
 
-w <- c(0.3, 0.3, 0.4)# Initial weights
+w <- c(0.3, 0.3, 0.4) # Initial weights
 ```
 
 ```{r}
-name_hypotheses <- c("H1: Biomarker A positive", "H2: Biomarker B positive",  "H3: Overall Population")
+name_hypotheses <- c(
+  "H1: Biomarker A positive",
+  "H2: Biomarker B positive",
+  "H3: Overall Population"
+)
 
 hplot <- gMCPLite::hGraph(
-  3,alphaHypotheses=w,m=m,
-  nameHypotheses=name_hypotheses, trhw=.2, trhh=.1,
-  digits=5, trdigits=3, size=5, halfWid=1, halfHgt=0.5,
-  offset=0.2 , trprop= 0.4,
-  fill=as.factor(c(2,3,1)),
+  3,
+  alphaHypotheses = w, m = m,
+  nameHypotheses = name_hypotheses, trhw = .2, trhh = .1,
+  digits = 5, trdigits = 3, size = 5, halfWid = 1, halfHgt = 0.5,
+  offset = 0.2, trprop = 0.4,
+  fill = as.factor(c(2, 3, 1)),
   palette = c("#BDBDBD", "#E0E0E0", "#EEEEEE"),
-  wchar = "w")
+  wchar = "w"
+)
 hplot
 ```
 
@@ -132,7 +145,7 @@ graph <- gMCPLite::setWeights(graph, w)
 ```
 
 ```{r}
-# Set up hypothetical pvalues (0 or 1) to obtain all combinations
+# Set up hypothetical p-values (0 or 1) to obtain all combinations
 pvals <- NULL
 for (i in 1:n_hypotheses) {
   if (i == 1) {
@@ -144,26 +157,26 @@ for (i in 1:n_hypotheses) {
     pvals <- merge(pvals, tmp)
   }
 }
-# get the weights for each intersection hypothesis
-inter_weight <- NULL                      # create an emplty table to store the weight of interaction hypotheses
-for (i in seq_len(nrow(pvals))) {         # each row in `pvals` is 1 possible interaction hypothesis
+# Get the weights for each intersection hypothesis
+inter_weight <- NULL # Create an empty table to store the weight of interaction hypotheses
+for (i in seq_len(nrow(pvals))) { # Each row in `pvals` is 1 possible interaction hypothesis
   pval_tmp <- as.numeric(pvals[i, ])
   graph_tmp <- gMCPLite::gMCP(graph = graph, pvalues = pval_tmp, alpha = alpha)
   weight_tmp <- gMCPLite::getWeights(graph_tmp)
   inter_weight <- dplyr::bind_rows(inter_weight, weight_tmp)
 }
 
-inter_weight <- replace(inter_weight, pvals == 0, NA)  # replace the empty hypothesis as NA. 
-inter_weight <- inter_weight[-1, ]                     # delte the first row since it is empty set
+inter_weight <- replace(inter_weight, pvals == 0, NA) # Replace the empty hypothesis as NA
+inter_weight <- inter_weight[-1, ] # Delete the first row since it is empty set
 
-inter_weight %>% 
-  gt() %>% 
+inter_weight %>%
+  gt() %>%
   tab_header("Weight of all possible interaction hypothesis")
 ```
 
 ## Correlations
 
-The correlation of the 6 statistisc (2 analysis $\times$ 3 hypothesis) are
+The correlation of the 6 statistic (2 analyses $\times$ 3 hypotheses) are
 
 ```{r}
 # Event count of intersection of paired hypotheses - Table 2
@@ -172,18 +185,19 @@ The correlation of the 6 statistisc (2 analysis $\times$ 3 hypothesis) are
 # (1, 2) for counts for the intersection of hypotheses 1 and 2
 event <- tribble(
   ~H1, ~H2, ~Analysis, ~Event,
-  1,    1,      1,     event_tbl %>% filter(analysis == 1, population == "A positive") %>% select(event) %>% as.numeric(),
-  2,    2,      1,     event_tbl %>% filter(analysis == 1, population == "B positive") %>% select(event) %>% as.numeric(),
-  3,    3,      1,     event_tbl %>% filter(analysis == 1, population == "overall") %>% select(event) %>% as.numeric(),
-  1,    2,      1,     event_tbl %>% filter(analysis == 1, population == "AB positive") %>% select(event) %>% as.numeric(),
-  1,    3,      1,     event_tbl %>% filter(analysis == 1, population == "A positive") %>% select(event) %>% as.numeric(),
-  2,    3,      1,     event_tbl %>% filter(analysis == 1, population == "B positive") %>% select(event) %>% as.numeric(),
-  1,    1,      2,     event_tbl %>% filter(analysis == 2, population == "A positive") %>% select(event) %>% as.numeric(),
-  2,    2,      2,     event_tbl %>% filter(analysis == 2, population == "B positive") %>% select(event) %>% as.numeric(),
-  3,    3,      2,     event_tbl %>% filter(analysis == 2, population == "overall") %>% select(event) %>% as.numeric(),
-  1,    2,      2,     event_tbl %>% filter(analysis == 2, population == "AB positive") %>% select(event) %>% as.numeric(),
-  1,    3,      2,     event_tbl %>% filter(analysis == 2, population == "A positive") %>% select(event) %>% as.numeric(),
-  2,    3,      2,     event_tbl %>% filter(analysis == 2, population == "B positive") %>% select(event) %>% as.numeric())
+  1, 1, 1, event_tbl %>% filter(analysis == 1, population == "A positive") %>% select(event) %>% as.numeric(),
+  2, 2, 1, event_tbl %>% filter(analysis == 1, population == "B positive") %>% select(event) %>% as.numeric(),
+  3, 3, 1, event_tbl %>% filter(analysis == 1, population == "overall") %>% select(event) %>% as.numeric(),
+  1, 2, 1, event_tbl %>% filter(analysis == 1, population == "AB positive") %>% select(event) %>% as.numeric(),
+  1, 3, 1, event_tbl %>% filter(analysis == 1, population == "A positive") %>% select(event) %>% as.numeric(),
+  2, 3, 1, event_tbl %>% filter(analysis == 1, population == "B positive") %>% select(event) %>% as.numeric(),
+  1, 1, 2, event_tbl %>% filter(analysis == 2, population == "A positive") %>% select(event) %>% as.numeric(),
+  2, 2, 2, event_tbl %>% filter(analysis == 2, population == "B positive") %>% select(event) %>% as.numeric(),
+  3, 3, 2, event_tbl %>% filter(analysis == 2, population == "overall") %>% select(event) %>% as.numeric(),
+  1, 2, 2, event_tbl %>% filter(analysis == 2, population == "AB positive") %>% select(event) %>% as.numeric(),
+  1, 3, 2, event_tbl %>% filter(analysis == 2, population == "A positive") %>% select(event) %>% as.numeric(),
+  2, 3, 2, event_tbl %>% filter(analysis == 2, population == "B positive") %>% select(event) %>% as.numeric()
+)
 event
 
 # Generate correlation from events
@@ -195,12 +209,13 @@ corr %>% round(2)
 
 ## Boundary of $H_1$
 
-For the elementary hypothesis $H_1$, its weight is 1, i.e.,
+For the elementary hypothesis $H_1$, its weight is 1, namely,
+
 ```{r}
 w_H1 <- 1
 
 # Index to select from the correlation matrix
-indx <- grep('H1', colnames(corr))
+indx <- grep("H1", colnames(corr))
 corr_H1 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -211,20 +226,28 @@ pval_H1 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H1[, ncol(corr_H1)]^2,
   alpha = alpha * w_H1[1],
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H1", `H1 p-value boundary` = pval_H1, `H2 p-value boundary` = NA, `H3 p-value boundary` = NA)
+ans <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H1",
+  `H1 p-value boundary` = pval_H1,
+  `H2 p-value boundary` = NA,
+  `H3 p-value boundary` = NA
+)
 ans %>% gt()
 ```
 
 ## Boundary of $H_2$
 
-For the elementary hypothesis $H_2$, its weight is 1, i.e.,
+For the elementary hypothesis $H_2$, its weight is 1, namely,
+
 ```{r}
 w_H2 <- 1
 
 # Index to select from the correlation matrix
-indx <- grep('H2', colnames(corr))
+indx <- grep("H2", colnames(corr))
 corr_H2 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -235,21 +258,29 @@ pval_H2 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H2[, ncol(corr_H2)]^2,
   alpha = alpha * w_H2[1],
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans_new <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H2", `H1 p-value boundary` = NA, `H2 p-value boundary` = pval_H2, `H3 p-value boundary` = NA)
+ans_new <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H2",
+  `H1 p-value boundary` = NA,
+  `H2 p-value boundary` = pval_H2,
+  `H3 p-value boundary` = NA
+)
 ans_new %>% gt()
 ans <- rbind(ans, ans_new)
 ```
 
 ## Boundary of $H_3$
 
-For the elementary hypothesis $H_2$, its weight is 1, i.e.,
+For the elementary hypothesis $H_3$, its weight is 1, namely,
+
 ```{r}
 w_H3 <- 1
 
 # Index to select from the correlation matrix
-indx <- grep('H3', colnames(corr))
+indx <- grep("H3", colnames(corr))
 corr_H3 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -260,29 +291,38 @@ pval_H3 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H3[, ncol(corr_H3)]^2,
   alpha = alpha * w_H3[1],
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans_new <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H3", `H1 p-value boundary` = NA, `H2 p-value boundary` = NA, `H3 p-value boundary` = pval_H1)
+ans_new <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H3",
+  `H1 p-value boundary` = NA,
+  `H2 p-value boundary` = NA,
+  `H3 p-value boundary` = pval_H1
+)
 ans_new %>% gt()
 ans <- rbind(ans, ans_new)
 ```
 
-
 ## Boundary of $H_1 \cap H_2$
 
 For the interaction hypothesis $H_1 \cap H_2$, its weight is
+
 ```{r}
 w_H12 <- inter_weight %>% filter(!is.na(H1), !is.na(H2), is.na(H3))
-w_H12 <- w_H12[(!is.na(w_H12))]       # remove NA from weight
+w_H12 <- w_H12[(!is.na(w_H12))] # Remove NA from weight
 w_H12
 ```
-And the boundary for $H_1$ and $H_2$ are 
+
+And the boundary for $H_1$ and $H_2$ are
+
 ```{r}
-# -------------# 
+# -------------#
 #      H1      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H1', colnames(corr))
+indx <- grep("H1", colnames(corr))
 corr_H1 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -291,15 +331,16 @@ pval_H1 <- 1 - pnorm(gsDesign::gsDesign(
   test.type = 1,
   usTime = IF_IA[1],
   n.I = corr_H1[, ncol(corr_H1)]^2,
-  alpha = alpha * w_H12[1],    # alpha is different since the weight is updated
+  alpha = alpha * w_H12[1], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-# -------------# 
+# -------------#
 #      H2      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H2', colnames(corr))
+indx <- grep("H2", colnames(corr))
 corr_H2 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -310,30 +351,38 @@ pval_H2 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H2[, ncol(corr_H2)]^2,
   alpha = alpha * w_H12[2], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans_new <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H1, H2", `H1 p-value boundary` = pval_H1, `H2 p-value boundary` = pval_H2, `H3 p-value boundary` = NA)
+ans_new <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H1, H2",
+  `H1 p-value boundary` = pval_H1,
+  `H2 p-value boundary` = pval_H2,
+  `H3 p-value boundary` = NA
+)
 ans_new %>% gt()
 ans <- rbind(ans, ans_new)
 ```
 
-
-
 ## Boundary of $H_1 \cap H_3$
 
 For the interaction hypothesis $H_1 \cap H_2$, its weight is
+
 ```{r}
 w_H13 <- inter_weight %>% filter(!is.na(H1), is.na(H2), !is.na(H3))
-w_H13 <- w_H13[(!is.na(w_H13))]       # remove NA from weight
+w_H13 <- w_H13[(!is.na(w_H13))] # Remove NA from weight
 w_H13
 ```
-And the boundary for $H_1$ and $H_3$ are 
+
+And the boundary for $H_1$ and $H_3$ are
+
 ```{r}
-# -------------# 
+# -------------#
 #      H1      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H1', colnames(corr))
+indx <- grep("H1", colnames(corr))
 corr_H1 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -342,15 +391,16 @@ pval_H1 <- 1 - pnorm(gsDesign::gsDesign(
   test.type = 1,
   usTime = IF_IA[1],
   n.I = corr_H1[, ncol(corr_H1)]^2,
-  alpha = alpha * w_H13[1],    # alpha is different since the weight is updated
+  alpha = alpha * w_H13[1], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-# -------------# 
+# -------------#
 #      H3      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H3', colnames(corr))
+indx <- grep("H3", colnames(corr))
 corr_H3 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -361,29 +411,38 @@ pval_H3 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H3[, ncol(corr_H3)]^2,
   alpha = alpha * w_H13[2], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans_new <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H1, H3", `H1 p-value boundary` = pval_H1, `H2 p-value boundary` = NA, `H3 p-value boundary` = pval_H3)
+ans_new <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H1, H3",
+  `H1 p-value boundary` = pval_H1,
+  `H2 p-value boundary` = NA,
+  `H3 p-value boundary` = pval_H3
+)
 ans_new %>% gt()
 ans <- rbind(ans, ans_new)
 ```
 
-
 ## Boundary of $H_2 \cap H_3$
 
 For the interaction hypothesis $H_2 \cap H_3$, its weight is
+
 ```{r}
 w_H23 <- inter_weight %>% filter(is.na(H1), !is.na(H2), !is.na(H3))
-w_H23 <- w_H23[(!is.na(w_H23))]       # remove NA from weight
+w_H23 <- w_H23[(!is.na(w_H23))] # Remove NA from weight
 w_H23
 ```
-And the boundary for $H_2$ and $H_3$ are 
+
+And the boundary for $H_2$ and $H_3$ are
+
 ```{r}
-# -------------# 
+# -------------#
 #      H2      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H2', colnames(corr))
+indx <- grep("H2", colnames(corr))
 corr_H2 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -392,15 +451,16 @@ pval_H2 <- 1 - pnorm(gsDesign::gsDesign(
   test.type = 1,
   usTime = IF_IA[2],
   n.I = corr_H2[, ncol(corr_H2)]^2,
-  alpha = alpha * w_H23[1],    # alpha is different since the weight is updated
+  alpha = alpha * w_H23[1], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-# -------------# 
+# -------------#
 #      H3      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H3', colnames(corr))
+indx <- grep("H3", colnames(corr))
 corr_H3 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -411,29 +471,38 @@ pval_H3 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H3[, ncol(corr_H3)]^2,
   alpha = alpha * w_H23[2], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans_new <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H2, H3", `H1 p-value boundary` = NA, `H2 p-value boundary` = pval_H2, `H3 p-value boundary` = pval_H3)
+ans_new <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H2, H3",
+  `H1 p-value boundary` = NA,
+  `H2 p-value boundary` = pval_H2,
+  `H3 p-value boundary` = pval_H3
+)
 ans_new %>% gt()
 ans <- rbind(ans, ans_new)
 ```
 
-
 ## Boundary of $H1 \cap H_2 \cap H_3$
 
 For the interaction hypothesis $H_1 \cap H_2$, its weight is
+
 ```{r}
 w_H123 <- inter_weight %>% filter(!is.na(H1), !is.na(H2), !is.na(H3))
-w_H123 <- w_H123[(!is.na(w_H123))]       # remove NA from weight
+w_H123 <- w_H123[(!is.na(w_H123))] # Remove NA from weight
 w_H123
 ```
-And the boundary for $H_1$, $H_2$ and $H_3$ are 
+
+And the boundary for $H_1$, $H_2$, and $H_3$ are
+
 ```{r}
-# -------------# 
+# -------------#
 #      H1      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H1', colnames(corr))
+indx <- grep("H1", colnames(corr))
 corr_H1 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -442,16 +511,16 @@ pval_H1 <- 1 - pnorm(gsDesign::gsDesign(
   test.type = 1,
   usTime = IF_IA[1],
   n.I = corr_H1[, ncol(corr_H1)]^2,
-  alpha = alpha * w_H123[1],    # alpha is different since the weight is updated
+  alpha = alpha * w_H123[1], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-
-# -------------# 
+# -------------#
 #      H2      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H2', colnames(corr))
+indx <- grep("H2", colnames(corr))
 corr_H2 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -460,15 +529,16 @@ pval_H2 <- 1 - pnorm(gsDesign::gsDesign(
   test.type = 1,
   usTime = IF_IA[2],
   n.I = corr_H2[, ncol(corr_H2)]^2,
-  alpha = alpha * w_H123[1],    # alpha is different since the weight is updated
+  alpha = alpha * w_H123[1], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-# -------------# 
+# -------------#
 #      H3      #
-# -------------# 
+# -------------#
 # Index to select from the correlation matrix
-indx <- grep('H3', colnames(corr))
+indx <- grep("H3", colnames(corr))
 corr_H3 <- corr[indx, indx]
 
 # Boundary for a single hypothesis across k for the intersection hypothesis
@@ -479,9 +549,16 @@ pval_H3 <- 1 - pnorm(gsDesign::gsDesign(
   n.I = corr_H3[, ncol(corr_H3)]^2,
   alpha = alpha * w_H123[3], # alpha is different since the weight is updated
   sfu = sfHSD,
-  sfupar = -4)$upper$bound)
+  sfupar = -4
+)$upper$bound)
 
-ans_new <- tibble(Analysis = 1:2, `Interaction/Elementary hypotheses` = "H1, H2, H3", `H1 p-value boundary` = pval_H1, `H2 p-value boundary` = pval_H2, `H3 p-value boundary` = pval_H3)
+ans_new <- tibble(
+  Analysis = 1:2,
+  `Interaction/Elementary hypotheses` = "H1, H2, H3",
+  `H1 p-value boundary` = pval_H1,
+  `H2 p-value boundary` = pval_H2,
+  `H3 p-value boundary` = pval_H3
+)
 ans_new %>% gt()
 ans <- rbind(ans, ans_new)
 ```
@@ -489,20 +566,24 @@ ans <- rbind(ans, ans_new)
 # Summary
 
 With the p-value boundaries, one can get the Z-statistics boundaries by `qnorm()`.
+
 ```{r}
-ans %>% 
-  mutate(`H1 Z-statistics boundary` = -qnorm(`H1 p-value boundary`),
-         `H1 Z-statistics boundary` = -qnorm(`H2 p-value boundary`),
-         `H1 Z-statistics boundary` = -qnorm(`H3 p-value boundary`)) %>% 
-  arrange(Analysis, `Interaction/Elementary hypotheses`) %>% 
-  gt() %>% 
+ans %>%
+  mutate(
+    `H1 Z-statistics boundary` = -qnorm(`H1 p-value boundary`),
+    `H1 Z-statistics boundary` = -qnorm(`H2 p-value boundary`),
+    `H1 Z-statistics boundary` = -qnorm(`H3 p-value boundary`)
+  ) %>%
+  arrange(Analysis, `Interaction/Elementary hypotheses`) %>%
+  gt() %>%
   tab_header("p-values/Z-statistics boundaries of weighted Bonferroni")
 ```
 
+# Implementation in wpgsd
 
-# Implementation in `wpgsd`
+The above results can be computed in one function call in wpgsd by using
+the `generate_bounds()` function as
 
-The above results can be computed in one function call in `wpgsd` by using the `generate_bounds()` function as
 ```{r}
 generate_bounds(
   type = 0,
@@ -512,8 +593,7 @@ generate_bounds(
   corr = corr,
   alpha = 0.025,
   sf = list(sfHSD, sfHSD, sfHSD),
-  sfparm = list(-4,-4, -4),
-  t = list(c(0.5,1), c(0.5,1), c(0.5,1))
+  sfparm = list(-4, -4, -4),
+  t = list(c(0.5, 1), c(0.5, 1), c(0.5, 1))
 ) %>% gt()
 ```
-
