--- a/vignettes/wpgsd_corr_example.Rmd
+++ b/vignettes/wpgsd_corr_example.Rmd
@@ -37,9 +37,9 @@ library(tibble)
 library(gt)
 event_tb <- tribble(
   ~Population, ~"Number of Event in IA", ~"Number of Event in FA",
-  "Population 1", 100,200,
-  "Population 2",  110,220,
-  "Overlap of Population 1 and 2", 80,160,
+  "Population 1", 100, 200,
+  "Population 2", 110, 220,
+  "Overlap of Population 1 and 2", 80, 160,
   "Overall Population", 225, 450
 )
 event_tb %>%
@@ -56,7 +56,7 @@ The number of events are listed as
 event_tbl <- tribble(
   ~Population, ~"Number of Event in IA",
   "Population 1", 100,
-  "Population 2",  110,
+  "Population 2", 110,
   "Overlap in population 1 and 2", 80
 )
 event_tbl %>%
@@ -66,8 +66,8 @@ event_tbl %>%
 The the corrleation could be simply calculated as 
 $$Corr(Z_{11},Z_{21})=\frac{80}{\sqrt{100*110}}=0.76$$
 ```{r}
-Corr1=80/sqrt(100*110)
-round(Corr1,2)
+Corr1 <- 80 / sqrt(100 * 110)
+round(Corr1, 2)
 ```
 
 ### Example 2 - Same Population Different Analyses
@@ -78,7 +78,7 @@ The number of events are listed as
 ```{r}
 event_tb2 <- tribble(
   ~Population, ~"Number of Event in IA", ~"Number of Event in FA",
-  "Population 1", 100,200
+  "Population 1", 100, 200
 )
 event_tb2 %>%
   gt() %>%
@@ -87,8 +87,8 @@ event_tb2 %>%
 The the corrleation could be simply calculated as 
 $$Corr(Z_{11},Z_{12})=\frac{100}{\sqrt{100*200}}=0.71$$
 ```{r}
-Corr1=100/sqrt(100*200)
-round(Corr1,2)
+Corr1 <- 100 / sqrt(100 * 200)
+round(Corr1, 2)
 ```
 ### Example 3 - Cross Population Cross Analyses
 Let's consider the situation that we want to compare population 1 in interim analyses and population 2 in final analyses. Then for different population, $i=1$ and $i=2$, and to compare IA and FA, the $k$ will be $k=1$ and $k=2$. 
@@ -98,10 +98,9 @@ The number of events are listed as
 ```{r}
 event_tb3 <- tribble(
   ~Population, ~"Number of Event in IA", ~"Number of Event in FA",
-  "Population 1", 100,200,
+  "Population 1", 100, 200,
   "Population 2", 110, 220,
-  "Overlap in population 1 and 2", 80,160
-
+  "Overlap in population 1 and 2", 80, 160
 )
 event_tb3 %>%
   gt() %>%
@@ -110,8 +109,8 @@ event_tb3 %>%
 The the corrleation could be simply calculated as 
 $$Corr(Z_{11},Z_{22})=\frac{80}{\sqrt{100*220}}=0.54$$
 ```{r}
-Corr1=80/sqrt(100*220)
-round(Corr1,2)
+Corr1 <- 80 / sqrt(100 * 220)
+round(Corr1, 2)
 ```
 Now we know how to calculate the correlation values under different situations, and the generate_corr function was built based on this logic. We can directly calculate the results for each cross situation via the function. 
 
@@ -120,22 +119,22 @@ First, we need a event table including the information of the cohort.
 
 ```{r}
 library(wpgsd)
-#The event table
+# The event table
 event <- tibble::tribble(
-   ~ H1, ~H2, ~Analysis, ~Event,
-   1, 1, 1, 100,
-   2, 2, 1, 110,
-   3, 3, 1, 225,
-   1, 2, 1, 80,
-   1, 3, 1, 100,
-   2, 3, 1, 110,
-   1, 1, 2, 200,
-   2, 2, 2, 220,
-   3, 3, 2, 450,
-   1, 2, 2, 160,
-   1, 3, 2, 200,
-   2, 3, 2, 220
- )
+  ~H1, ~H2, ~Analysis, ~Event,
+  1, 1, 1, 100,
+  2, 2, 1, 110,
+  3, 3, 1, 225,
+  1, 2, 1, 80,
+  1, 3, 1, 100,
+  2, 3, 1, 110,
+  1, 1, 2, 200,
+  2, 2, 2, 220,
+  3, 3, 2, 450,
+  1, 2, 2, 160,
+  1, 3, 2, 200,
+  2, 3, 2, 220
+)
 event %>%
   gt() %>%
   tab_header(title = "Number of events at each population & analyses")
@@ -150,10 +149,10 @@ Another example: H1=1, H2=2, Analysis=2, Event=160 means the overlap number of e
 After we have the event table, we can use generate_corr function to calculate correlation.
 
 ```{r}
-all_corr=round(generate_corr(event),2)
-colnames(all_corr)=c("P1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
-rownames(all_corr)=c("P1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
-all_corr 
+all_corr <- round(generate_corr(event), 2)
+colnames(all_corr) <- c("P1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
+rownames(all_corr) <- c("P1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
+all_corr
 ```
 * P1/P2: Population 1/2; IA: Interim analysis; FA: Final analysis
 
@@ -166,23 +165,23 @@ The code will still give you the results
 
 ```{r}
 event <- tibble::tribble(
-   ~H1, ~H2, ~Analysis, ~Event,
-   1, 1, 1, 5,
-   2, 2, 1, 1100,
-   3, 3, 1, 2250,
-   1, 2, 1, 4,
-   1, 3, 1, 2,
-   2, 3, 1, 1100,
-   1, 1, 2, 8,
-   2, 2, 2, 2200,
-   3, 3, 2, 4500,
-   1, 2, 2, 6,
-   1, 3, 2, 7,
-   2, 3, 2, 2200
- )
-all_corr=round(generate_corr(event),2)
-colnames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
-rownames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
+  ~H1, ~H2, ~Analysis, ~Event,
+  1, 1, 1, 5,
+  2, 2, 1, 1100,
+  3, 3, 1, 2250,
+  1, 2, 1, 4,
+  1, 3, 1, 2,
+  2, 3, 1, 1100,
+  1, 1, 2, 8,
+  2, 2, 2, 2200,
+  3, 3, 2, 4500,
+  1, 2, 2, 6,
+  1, 3, 2, 7,
+  2, 3, 2, 2200
+)
+all_corr <- round(generate_corr(event), 2)
+colnames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
+rownames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
 all_corr
 ```
 
@@ -192,23 +191,23 @@ The code will still give you results but with some correlations are 0
 
 ```{r}
 event <- tibble::tribble(
-   ~H1, ~H2, ~Analysis, ~Event,
-   1, 1, 1, 100,
-   2, 2, 1, 110,
-   3, 3, 1, 225,
-   1, 2, 1, 0,
-   1, 3, 1, 100,
-   2, 3, 1, 110,
-   1, 1, 2, 200,
-   2, 2, 2, 220,
-   3, 3, 2, 450,
-   1, 2, 2, 0,
-   1, 3, 2, 200,
-   2, 3, 2, 220
- )
-all_corr=round(generate_corr(event),2)
-colnames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
-rownames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
+  ~H1, ~H2, ~Analysis, ~Event,
+  1, 1, 1, 100,
+  2, 2, 1, 110,
+  3, 3, 1, 225,
+  1, 2, 1, 0,
+  1, 3, 1, 100,
+  2, 3, 1, 110,
+  1, 1, 2, 200,
+  2, 2, 2, 220,
+  3, 3, 2, 450,
+  1, 2, 2, 0,
+  1, 3, 2, 200,
+  2, 3, 2, 220
+)
+all_corr <- round(generate_corr(event), 2)
+colnames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
+rownames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
 all_corr
 ```
 
@@ -217,23 +216,23 @@ Situation 3-1: The number of events number mistakenly been recorded as negative
 The warning message will be displayed, and NA's have been generated.
 ```{r}
 event <- tibble::tribble(
-   ~H1, ~H2, ~Analysis, ~Event,
-   1, 1, 1, -100,
-   2, 2, 1, 110,
-   3, 3, 1, 225,
-   1, 2, 1, 80,
-   1, 3, 1, 100,
-   2, 3, 1, 110,
-   1, 1, 2, -200,
-   2, 2, 2, 220,
-   3, 3, 2, 450,
-   1, 2, 2, 160,
-   1, 3, 2, 200,
-   2, 3, 2, 220
- )
-all_corr=round(generate_corr(event),2)
-colnames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
-rownames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
+  ~H1, ~H2, ~Analysis, ~Event,
+  1, 1, 1, -100,
+  2, 2, 1, 110,
+  3, 3, 1, 225,
+  1, 2, 1, 80,
+  1, 3, 1, 100,
+  2, 3, 1, 110,
+  1, 1, 2, -200,
+  2, 2, 2, 220,
+  3, 3, 2, 450,
+  1, 2, 2, 160,
+  1, 3, 2, 200,
+  2, 3, 2, 220
+)
+all_corr <- round(generate_corr(event), 2)
+colnames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
+rownames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
 all_corr
 ```
 
@@ -242,22 +241,22 @@ Situation 3-2: The number of overlap events number mistakenly been recorded as n
 No warning or error message generated. But the correlation could be negative, which is misleading information. Please be careful and check data before go to the next step.
 ```{r}
 event <- tibble::tribble(
-   ~H1, ~H2, ~Analysis, ~Event,
-   1, 1, 1, 100,
-   2, 2, 1, 110,
-   3, 3, 1, 225,
-   1, 2, 1, -80,
-   1, 3, 1, 100,
-   2, 3, 1, 110,
-   1, 1, 2, 200,
-   2, 2, 2, 220,
-   3, 3, 2, 450,
-   1, 2, 2, -160,
-   1, 3, 2, 200,
-   2, 3, 2, 220
- )
-all_corr=round(generate_corr(event),2)
-colnames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
-rownames(all_corr)=c("Population 1, IA", "P2, IA", "P3, IA","P1, FA","P2, FA", "P3, FA")
+  ~H1, ~H2, ~Analysis, ~Event,
+  1, 1, 1, 100,
+  2, 2, 1, 110,
+  3, 3, 1, 225,
+  1, 2, 1, -80,
+  1, 3, 1, 100,
+  2, 3, 1, 110,
+  1, 1, 2, 200,
+  2, 2, 2, 220,
+  3, 3, 2, 450,
+  1, 2, 2, -160,
+  1, 3, 2, 200,
+  2, 3, 2, 220
+)
+all_corr <- round(generate_corr(event), 2)
+colnames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
+rownames(all_corr) <- c("Population 1, IA", "P2, IA", "P3, IA", "P1, FA", "P2, FA", "P3, FA")
 all_corr
 ```
